# OxiVEP

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: pages.yml
benchmarks/: run_benchmark.sh
crates/fastvep-cli/src/: pipeline.rs
crates/fastvep-io/src/: output.rs
crates/fastvep-sa/src/: common.rs  reader.rs  reader_v2.rs  writer_v2.rs
crates/fastvep-web/src/: context.rs  handlers.rs  main.rs
crates/oxivep-cache/: Cargo.toml
crates/oxivep-cache/src/: fasta.rs  gff.rs  lib.rs  providers.rs  transcript_cache.rs  variation.rs
crates/oxivep-cli/: Cargo.toml
crates/oxivep-cli/src/: main.rs  pipeline.rs
crates/oxivep-consequence/src/: predictor.rs  splice.rs  sv_predictor.rs
crates/oxivep-filter/src/: evaluator.rs  lexer.rs  lib.rs  parser.rs
crates/oxivep-genome/src/: codon.rs  transcript.rs
crates/oxivep-hgvs/src/: coding.rs  lib.rs  protein.rs
crates/oxivep-io/src/: output.rs  variant.rs  vcf.rs
crates/oxivep-io/tests/: vep_compat.rs
crates/oxivep-sa/src/: bloom.rs  lib.rs
crates/oxivep-sa/src/sources/: clinvar.rs  dbsnp.rs  gnomad.rs  gnomad_gene.rs  gnomad_v2.rs  mod.rs  omim.rs
docs/: index.html
manuscript/: manuscript.md
manuscript/data/: code_metrics.csv  format_comparison.csv  giab_benchmark.csv  organism_comparison.csv  resource_usage.csv  scaling.csv  vep_comparison.csv
manuscript/figures/: generate_figures.py
tests/: test_chr1.vcf
validation/: .gitignore  compare_detailed.py  compare_vep.py  run_validation.sh
validation/human/: chr11_1kgp.vcf  chr17_1kgp.vcf  chr22_1kgp.vcf  chr7_1kgp.vcf
validation/mouse/: mouse_chr19_mgp.vcf  mouse_chr19_sorted.gff3.gz.tbi
web/: index.html
