[package]
name = "oxivep-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for OxiVEP"

[[bin]]
name = "oxivep"
path = "src/main.rs"

[dependencies]
oxivep-core = { workspace = true }
oxivep-genome = { workspace = true }
oxivep-cache = { workspace = true }
oxivep-consequence = { workspace = true }
oxivep-hgvs = { workspace = true }
oxivep-io = { workspace = true }
oxivep-filter = { workspace = true }
oxivep-sa = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
